--- a/index.html
+++ b/index.html
@@ -51,7 +51,47 @@
         <img src="asset/side menu - ROSA.png" alt="">
         <p><b>Bila kita hanya menemukan tarif ERGA OMNES setelah melakukan pencarian, maka itulah tarif yang dikenakan pada barang tersebut</b></p>
     </div>
+    <div class="container medium-spacing flow-ver">
+        <h2 class="ff-jost fs-600 fw-500 uppercase medium-spacing">
+            step kedua
+        </h2>
 
+        <h3 class="ff-jost fs-500 fw-400 uppercase medium-spacing">
+            Ada 2 jenis Dokumen yang dibutuhkan, <b>General dan spesifik</b>
+        </h3>  
+
+        <h3 class="ff-jost fs-500 fw-400 uppercase medium-spacing">
+            <b>General</b>
+         </h3>
+
+        <p> <b class="fw-500">1. Commercial Invoice</b>
+            <ul>
+                <li>Informasi tentang exportir dan importir (nama dan alamat)</li>
+                <li>Tanggal Pengeluaran</li>
+                <li>Nomor Faktur</li>
+                <li>Deskripsi Barang (name, Quality, etc.)</li>
+                <li>Satuan Ukuran</li>
+                <li>Jumlah quantity barang</li>
+                <li>Nilai satuan / unit</li>
+                <li>Total nilai Satuan</li>
+                <li>Total nilai faktur dan mata uang pembayaran</li>
+                <li>Ketentuan Pembayaran (Metode Pembayaran, tanggal pembayaran, diskon, dll)</li>
+                <li>Ketentuan pengiriman sesuai dengan Incoterm yang sesuai (DAT (Delivered At Terminal), DAP (Delivered At Place) and DDP (Delivered Duty Paid).)</li>
+                <li>Alat informasi</li>
+                <li><b>Tambahan: Tidak ada spesifik Form, Faktur disiapkan oleh exportir beserta minimal 1 copy, Secara General tidak harus bertandatangan, Faktur yang diterjemahkan (Inggris dan atau negara tujuan)</b></li>
+            </ul>
+        </p>  
+        <p> <b class="fw-500">2. Custom Value Declaration (CVD)</b>
+            <ul>
+                <li>CVD dibutuhkan ketika total data nilai Pabean melebihi 20.000 € (COST, FREIGHT, INSURANCE)</li>
+                <li>Bila melebihi 20.000€, Maka harus mengisi Form <a href="https://webgate.ec.europa.eu/reqs2/public/v2/requirement/auxi/eu/32016R0341_gen_valuedec_dv1.pdf/"> DV1 </a></li>
+                <li>Form DV1 harus diserahkan beserta SAD (Single Administrative Document / Einheitspapier)</li>
+                <li>Barang bisa dibebaskan dari CVD, apabila total data nilai pabean tidak melebihi batas dan tidak dikirim terpisah atau beberapa kiriman kepada penerima yang sama</li>
+            </ul>
+        </p>
+
+               
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Observer.min.js"></script>
