Packing List & Proof of Origin

--- a/step-dua.html
+++ b/step-dua.html
@@ -72,10 +72,33 @@
                         <li>upaya untuk menyelamatkan nyawa atau barang di laut</li>
                     </ol>
                 </li>
-            </ol>
-       
-
-               
+            </ol>  
+        <p> <b class="fw-500">5. Packing List</b> </p>
+            <ol>
+                <li>Packing List adalah dokumen yang harus disertakan bersama Commercial Invoice dan Transport Dokumen</li>
+                <li>Secara general dokumennya berisi:</li>
+                <ol>
+                    <li>Informasi mengenai eksportir, importir, dan perusahaan transportasi</li>
+                    <li>Tanggal penerbitan</li>
+                    <li>Nomor faktur pengiriman barang</li>
+                    <li>Jenis kemasan (drum, peti, karton, kotak, tong, tas, dll.)</li>
+                    <li>Jumlah paket</li>
+                    <li>Isi setiap paket (deskripsi barang dan jumlah barang per paket)</li>
+                    <li>Tanda dan angka</li>
+                    <li>Berat bersih, berat kotor, dan ukuran paket</li>
+                </ol>
+                <li><b>Tambahan: Tidak ada spesifik Form, Faktur disiapkan oleh exportir beserta minimal 1 copy, Secara General tidak harus bertandatangan, Faktur yang diterjemahkan (Inggris dan atau negara tujuan)</b></li>
+            </ol>  
+        <p> <b class="fw-500">6. Proof of Origin (PoF)</b> </p>
+            <ol>
+                <li>Dokumen ini menyatakan bahwa barang yang termasuk dalam kiriman berasal dari negara atau wilayah tertentu</li>
+                <li>PoF harus dideklarasikan bersama dengan SAD (Single Administrative Document / Einheitspapier) untuk pengurusan bea cukai</li>
+                <li>Secara umum, status asal barang tersebut dapat dibuktikan dengan menggunakan PoF berikut</li>
+                <ol>
+                    <li><b>Certificates of non-preferential origin</b>, yaitu ketika tidak ada perjanjian perdagangan yang ditandatangani</li>
+                    <li><b>Certificates of preferential origin</b>, bila ada perjanjian perdagangan. Untuk ke Jerman jenis sertifikat yang dibutuhkan adalah EUR1</li>
+                </ol>    
+            </ol>  
     </div>
 </body>
 </html>
